--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>GABRIEL GIDEON BASSEY</h1>
         <p>I am a web developer and mobile app developer</p>
         <p>I love coding a lot</p>
+        <p>I no like to code</p>
     </center>
     
     <hr size="5" noshade>
